# Vita3K

./: .clang-format  CMakeLists.txt  gen-windows.bat
lang/: ru.xml
lang/system/: en.xml  ru.xml
tools/gen-modules/: gen-modules.cpp
vita3k/: CMakeLists.txt  interface.cpp  interface.h  main.cpp
vita3k/app/src/: app_init.cpp  screen_render.cpp
vita3k/audio/src/: audio.cpp
vita3k/camera/: CMakeLists.txt
vita3k/camera/include/camera/: camera.h  functions.h  state.h
vita3k/camera/src/: camera.cpp  camera_opencv.cpp  camera_state.cpp
vita3k/codec/: CMakeLists.txt
vita3k/codec/src/: atrac9.cpp  decoder.cpp  h264.cpp  mjpeg.cpp  mp3.cpp  pcm.cpp  player.cpp
vita3k/cpu/src/: dynarmic_cpu.cpp
vita3k/ctrl/src/: ctrl.cpp
vita3k/emuenv/src/: emuenv.cpp
vita3k/gdbstub/src/: gdb.cpp
vita3k/gui/src/: app_context_menu.cpp  archive_install_dialog.cpp  common_dialog.cpp  compile_shaders.cpp  content_manager.cpp  controllers_dialog.cpp  controls_dialog.cpp  firmware_install_dialog.cpp  gui.cpp  home_screen.cpp  information_bar.cpp  initial_setup.cpp  license_install_dialog.cpp  live_area.cpp  manual.cpp  pkg_install_dialog.cpp  private.h  settings.cpp  settings_dialog.cpp  themes.cpp  threads_dialog.cpp  trophy_collection.cpp  user_management.cpp  vita3k_update.cpp
vita3k/gxm/src/: gxp.cpp
vita3k/io/src/: io.cpp
vita3k/kernel/src/: callback.cpp  kernel.cpp  load_self.cpp  thread.cpp
vita3k/lang/src/: lang.cpp
vita3k/mem/src/: mem.cpp
vita3k/module/src/: load_module.cpp
vita3k/modules/: CMakeLists.txt  module_parent.cpp
vita3k/util/: CMakeLists.txt
(+143 files in other folders)
